--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
   },
   "homepage": "https://github.com/bcamarneiro/macfromip",
   "scripts": {
+    "build": "babel src -d lib",
     "test": "node test/test-macfromip.js"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5"
   }
 }
